a '!'.
Numbers in square brackets are sourceforge tracker IDs from
https://sourceforge.net/tracker/?group_id=66000&atid=513017

Numbers with # are CPANRT tracker IDs from
http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite

-----------------------------------------------------------------------
THIS RELEASE
-----------------------------------------------------------------------
0.710.09
   ! [2832939] chunked client requests are returned 411(Length Required) 
   ! [2860559] serious utf8 bug
   ! #44568 Tracing unavailable when SOAP::Lite is used as a server 
   ! #44195 submitting patches / mention Nginx transport module in documentation
   ! [2777361] SOAP 1.2 Content-Type rejected
   ! #41937 ([patch] enable more tests)
   ! #39101: Apache2::Const::HTTP_BAD_REQUEST not defined
   ! #39672: serialization and autotype 'off'
   ! #41348: t/SOAP/Transport/HTTP/CGI.t failing on 5.6.x
   ! #20569: XMLRPC::Lite "wrong element 'nil'" exception on '<value><nil/></value>'
   + require Task::Weaken
   + better META.yml generated (Alexandr Ciornii)

0.710.08 - Jul 13 2008
   ! [ 2015071 ] HTTP header is no more accessible
   The HTTP header can be pre-filled again. Now, the HTTP header is cloned
   from a (possibly user defined) header for every request
   ! #37358: Test Failure in Strawberry perl - IO::SessionData
   ! #37359: Test Failure in Strawberry perl - IO::SessionSet
   ! [ 2005296 ] CPANTS says META.yml broken
   ! [ 2005288 ] CPANTS: has_humanreadable_license not ok
   ! #37040: Memory leak when calling WS using wsdl
   SOAP::Transport::HTTP->new() was leaking two scalars per call
0.710.07
   ! [ 1963995 ] > not deserialized in result
   ! [ 1833218 ] < and > not deserialized in faultstring/detail
   ! [ 1959329 ] Incorrect Content-Type while sending requests with no parts
   ! [ 1945385 ] Incorrect starting part detection for Multipart/Related
0.710.06
   ! #36477 SOAP::Lite Envelope not stripped down for XMLRPC